# imodels

./: .gitignore  .gitmodules  .jupytext.toml  2_posthoc.ipynb  3_uncertainty.ipynb  Dynamic_FIG.ipynb  MANIFEST.in  _config.yml  citation.cff  compile_paper.sh  contributing.md  gosdt_tst.py  model-based.ipynb  model_based.ipynb  paper.md  posthoc.ipynb  pyproject.toml  readme.md  setup.py  uncertainty.ipynb
data/: boston.csv  train.label  train.out
docs/: build_docs.sh  contributing.md  figs.html  github.css  greedy_rule_list.html  html.mako  index.html  mdi_plus.html  rule_fit.html  shrinkage.html  skope_rules.html  slim.html  style_docs.py  troubleshooting.md
experiments/: 00_get_datasets_classification.ipynb  00_run_comparisons.py  00_submit_comparisons_deprecated.py  01_aggregate_comparisons.py  01_run_comparisons.py  01_submit_comparisons.py  01_submit_comparisons_deprecated.py  02_aggregate_comparisons.py  clean.sh  combine.py  compare_models.py  config.py  data_util.py  readme.md  submit_comparisons.py  util.py  validate.py
imodels/: __init__.py  documentation.md  greedy_rule_list.py  rule_fit.py  skope_rules.py  slim.py
notebooks/: 1_model_based.ipynb  2_posthoc.ipynb  FIGS_testing.ipynb  FIGS_testing.py  FIGS_viz_demo.ipynb  FIGS_viz_demo.py  autogluon_imodels_example.ipynb  autogluon_test.py  demo_helper.py  error_detection_demo.ipynb  figs_demo.ipynb  figs_demo.py  gmdi_demo.ipynb  imodels_automl.ipynb  imodels_comparisons.ipynb  imodels_demo.ipynb  matplotlibrc  mdi_plus_demo.ipynb  posthoc_analysis.ipynb  sparse_pruning_classification.ipynb  sparse_pruning_regression.ipynb  tree_gam_demo.ipynb  uncertainty_analysis.ipynb  viz.py
requirements/: requirements.txt
tests/: all_test.py  autogluon_test.py  boa_test.py  brl_test.py  brs_test.py  test.py  (+24 more)
(+888 files in other folders)
